[fix] skills wrapped

--- a/Xapp.Web/wwwroot/css/ProfileModoVista.css
+++ b/Xapp.Web/wwwroot/css/ProfileModoVista.css
@@ -617,10 +617,19 @@ label.login-box {
 
 
 /*SKILLS*/
-
-ul {
-    list-style-type: none;
+.skillsmenu-outer{
+    background-color:blue;
+    width:60%;
+    height:400px;
 }
+
+.horizontallist {
+    list-style: none;
+}
+
+    .horizontallist li {
+        display: inline;
+    }
 
 #skill_pill {
     color: black;
@@ -630,17 +639,10 @@ ul {
     margin-left: 15px;
     border-radius: 12px;
     font-size: 1.7rem;
-    width: 15%;
-    margin-bottom: 2%;
+    width: 30%;
     padding: 1% 2% 1% 2%;
-    box-shadow: 0.1px 0.2px 2.2px rgba(0, 0, 0, 0.02),
-        0.1px 0.6px 5.3px rgba(0, 0, 0, 0.028),
-        0.3px 1.1px 10px rgba(0, 0, 0, 0.035),
-        0.4px 2px 17.9px rgba(0, 0, 0, 0.042),
-        0.8px 3.8px 33.4px rgba(0, 0, 0, 0.05),
-        2px 9px 80px rgba(0, 0, 0, 0.07);
-    text-align:center;
-    display:inline;
+    box-shadow: 0.1px 0.2px 2.2px rgba(0, 0, 0, 0.02), 0.1px 0.6px 5.3px rgba(0, 0, 0, 0.028), 0.3px 1.1px 10px rgba(0, 0, 0, 0.035), 0.4px 2px 17.9px rgba(0, 0, 0, 0.042), 0.8px 3.8px 33.4px rgba(0, 0, 0, 0.05), 2px 9px 80px rgba(0, 0, 0, 0.07);
+    text-align: center;
 }
 
     #skill_pill.basic {
